Updated admin css files

--- a/admin/assets/css/image.css
+++ b/admin/assets/css/image.css
@@ -5,7 +5,7 @@
   vertical-align: middle;
   max-width: 100%;
   background-color: rgba(0, 0, 0, 0.05);
-  box-shadow: 2px 2px 0 0 rgba(0, 0, 0, 0.1);
+  border: 2px solid #e8e8e8
 }
 img.corporato.image {
   background: none;
@@ -63,7 +63,7 @@ img.corporato.image {
   display: inline-block;
   width: 3em;
   height: 3em;
-  border-radius: 500rem;
+  border-radius: 5px;
 }
 .corporato.floated.image,
 .corporato.floated.images {
