Updated admin css

--- a/admin/assets/css/message.css
+++ b/admin/assets/css/message.css
@@ -147,7 +147,7 @@
   margin: 0;
   font-size: 1.35em;
   font-weight: 400;
-  font-family: 'Oswald'
+  font-family: 'Roboto'
 }
 .corporato.message p {
   margin: 1em 0
