Updated admin css

--- a/admin/assets/css/table.css
+++ b/admin/assets/css/table.css
@@ -23,7 +23,7 @@
 }
 .corporato.table th {
   cursor: auto;
-  font-family: 'Oswald';
+  font-family: 'Roboto';
   background-color: #F0F3FA;
   text-align: left;
   color: rgba(0,0,0,0.5);
