--- a/admin/assets/css/button.css
+++ b/admin/assets/css/button.css
@@ -8,7 +8,7 @@
   border: none;
   background-color: #8D98B3;
   color: inherit;
-  font-family: 'Oswald';
+  font-family: 'Roboto';
   color:#fff;
   margin: 0em;
   padding: 0.8em 1.5em;
