--- a/admin/assets/css/form.css
+++ b/admin/assets/css/form.css
@@ -49,13 +49,13 @@
   margin: 0 0 .9em;
   display: block;
   font-size: 1rem;
-  font-family: 'Oswald';
+  font-family: 'Roboto';
   font-weight: 400;
   white-space: nowrap;
 }
 .corporato.form .field label.radio,
 .corporato.form .field label.checkbox {
-  font-family: 'Oswald';
+  font-family: 'Roboto';
   font-weight: 400;
   margin: 0
 }
