Updated frontend css

--- a/themes/camembao/css/divider.css
+++ b/themes/camembao/css/divider.css
@@ -1,7 +1,7 @@
 /* == Divider == */
 .corporato.divider {
   margin: .8rem 0;
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #f8f8f8;
   line-height: 1;
   height: 0;
   -webkit-box-sizing: border-box;
