--- a/themes/camembao/css/header.css
+++ b/themes/camembao/css/header.css
@@ -52,9 +52,9 @@ h1 {
 h2.corporato.header,
 h2 {
   line-height: 1.33;
-  font-weight: 600;
+  font-weight: 300;
   color: #982420;
-  font-size: 16px;
+  font-size: 2em;
 }
 h3.corporato.header,
 h3 {
