Updated frontend css

--- a/themes/camembao/css/menu.css
+++ b/themes/camembao/css/menu.css
@@ -460,7 +460,7 @@
 .corporato.pagination.menu .active.item {
   border-top: none;
   padding-top: .83em;
-  background-color: #F64243;
+  background-color: #982420;
   color: #fff;
   -webkit-box-shadow: none;
   box-shadow: none
