--- a/themes/camembao/css/style.css
+++ b/themes/camembao/css/style.css
@@ -5,13 +5,12 @@ body {
   margin: 0
 }
 body {
-	font-family: "Lato", sans-serif!important;
-  	
+	  font-family: 'Open Sans',sans-serif;
   	padding: 0px;
     margin: 0 0 50px;
   	color: #333;
   	text-rendering: optimizeLegibility;
-  	font-weight: 300;
+  	font-weight: 400;
   	background-color: #f8f8f8;
     min-height: 100%;
     margin-bottom: -50px
@@ -84,8 +83,30 @@ li.bold:last-child {
   padding-bottom: 20px
 }
 
+.home-lower {
+  padding: 0 0 0 2em;
+  margin: 0 auto
+}
+
+.home-lower .screen-25 {
+  border-right: 1px solid #e8e8e8;
+  padding: 0 1em!important
+}
+
+.home-lower .screen-25:last-child {
+  border-right: 0
+}
+
+.stat-title {
+  font-weight: 700;
+  font-size: 34px;
+  color: #982420;
+  text-align: center; 
+}
+
 .stat-desc {
-  font-size: .8em
+  font-size: .8em;
+  text-align: center;
 }
 
 .corporato.message.basic.itemheader {
@@ -208,6 +229,10 @@ div#slider figure {
 	font-size:.7em
 }
 
+.smallest.pc {
+  font-weight: 400!important
+}
+
 .small {
 	font-size:1rem
 }
@@ -263,6 +288,10 @@ div#slider figure {
 
 .padded-30 {
   padding: 30px 0
+}
+
+.padded-30t {
+  padding: 30px 0 0
 }
 
 .corporato.tabular.segment aside.nopadding {
@@ -575,6 +604,10 @@ ul.sm {
   padding-bottom: .5em
 }
 
+.meeting-title {
+  font-size: 1.5rem
+}
+
 .date-label, .committee-label {
   margin-right: 10px;
   color: #666;
@@ -586,16 +619,20 @@ ul.sm {
   border-bottom: 1px solid #f8f8f8
 }
 
-ol.committee-members {
+#item-content, .featured-leader {
+  padding: 20px 0 
+}
+
+ol.committee-members, ol.ranking {
   padding-left: 20px
 }
 
-ol.committee-members li {
+ol.committee-members li, ol.ranking li {
   padding:5px 0;
   border-bottom: 1px solid #e8e8e8; 
 }
 
-ol.committee-members li:last-child {
+ol.committee-members li:last-child, ol.ranking li:last-child {
   border-bottom: 0; 
 }
 
@@ -700,10 +737,15 @@ ul.bill-particulars li {
 #gridview {
 }
 
-#listview section {
+#listview section, #listview .meetings section {
   margin-bottom: 1em;
   border-bottom:1px solid #f8f8f8;
   position: relative;
+}
+
+.meetings section .inner{
+  padding-bottom: 1em
+
 }
 
 #listview section:last-child {
@@ -727,7 +769,6 @@ section.listmode .inner {
 
 
 section.gridmode {
-  background-color: #fff;
   overflow: hidden;
   position: relative;
   -moz-backface-visibility: hidden;
@@ -825,10 +866,6 @@ section.gridmode .gridwrap:hover .overlay-content {
 section.gridmode .gridwrap .inner > a {
   text-align: center;
   display: block;
-}
-
-section.gridmode img {
-	border:5px solid #fff
 }
 
 section.gridmode h4 {
