--- a/themes/camembao/css/divider.css
+++ b/themes/camembao/css/divider.css
@@ -14,6 +14,11 @@
   user-select: none;
   -webkit-tap-highlight-color: rgba(0,0,0,0)
 }
+
+.corporato.divider.darkgrey {
+  border-bottom: 1px solid #e8e8e8;
+}
+
 .corporato.vertical.divider,
 .corporato.horizontal.divider {
   position: absolute;
