--- a/themes/camembao/css/style.css
+++ b/themes/camembao/css/style.css
@@ -356,9 +356,15 @@ h3,
 h5,
 h6 {
   font-family: 'Lato', sans-serif;
-  font-weight:300;
   margin: 1rem 0 0rem;
 }
+
+h5 {
+  font-weight:700;
+  color: #999;
+  padding-bottom: .5em
+}
+
 p {
   margin-bottom: 1em;
 }
