--- a/admin/assets/css/login.css
+++ b/admin/assets/css/login.css
@@ -10,7 +10,7 @@ body {
   color: #fff;
   text-rendering: optimizeLegibility;
   font-weight: 400;
-  background:#FBE2CC;
+  background:#333;
   display: table;
   margin: 0 auto;
 }
